// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestViewContainer for testViewType=AdhocFailure renders per snapshot with no testViewOverrides 1`] = `
<AdhocIssuesTestView
  cardSelectionMessageCreator={{}}
  configuration={
    {
      "key": "configStub",
      "testViewOverrides": undefined,
      "testViewType": "AdhocFailure",
    }
  }
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  instancesSection={[Function]}
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=AdhocFailure renders per snapshot with testViewOverrides 1`] = `
<AdhocIssuesTestView
  cardSelectionMessageCreator={{}}
  configuration={
    {
      "key": "configStub",
      "testViewOverrides": {
        "content": "stub content page component "content"",
        "guidance": "stub content page component "guidance"",
      },
      "testViewType": "AdhocFailure",
    }
  }
  content="stub content page component "content""
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  guidance="stub content page component "guidance""
  instancesSection={[Function]}
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=AdhocNeedsReview renders per snapshot with no testViewOverrides 1`] = `
<AdhocIssuesTestView
  cardSelectionMessageCreator={{}}
  configuration={
    {
      "key": "configStub",
      "testViewOverrides": undefined,
      "testViewType": "AdhocNeedsReview",
    }
  }
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  instancesSection={[Function]}
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=AdhocNeedsReview renders per snapshot with testViewOverrides 1`] = `
<AdhocIssuesTestView
  cardSelectionMessageCreator={{}}
  configuration={
    {
      "key": "configStub",
      "testViewOverrides": {
        "content": "stub content page component "content"",
        "guidance": "stub content page component "guidance"",
      },
      "testViewType": "AdhocNeedsReview",
    }
  }
  content="stub content page component "content""
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  guidance="stub content page component "guidance""
  instancesSection={[Function]}
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=AdhocStatic renders per snapshot with no testViewOverrides 1`] = `
<AdhocStaticTestView
  configuration={
    {
      "key": "configStub",
      "testViewOverrides": undefined,
      "testViewType": "AdhocStatic",
    }
  }
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=AdhocStatic renders per snapshot with testViewOverrides 1`] = `
<AdhocStaticTestView
  configuration={
    {
      "key": "configStub",
      "testViewOverrides": {
        "content": "stub content page component "content"",
        "guidance": "stub content page component "guidance"",
      },
      "testViewType": "AdhocStatic",
    }
  }
  content="stub content page component "content""
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  guidance="stub content page component "guidance""
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=AdhocTabStops renders per snapshot with no testViewOverrides 1`] = `
<AdhocTabStopsTestView
  configuration={
    {
      "key": "configStub",
      "testViewOverrides": undefined,
      "testViewType": "AdhocTabStops",
    }
  }
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=AdhocTabStops renders per snapshot with testViewOverrides 1`] = `
<AdhocTabStopsTestView
  configuration={
    {
      "key": "configStub",
      "testViewOverrides": {
        "content": "stub content page component "content"",
        "guidance": "stub content page component "guidance"",
      },
      "testViewType": "AdhocTabStops",
    }
  }
  content="stub content page component "content""
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  guidance="stub content page component "guidance""
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=Assessment renders per snapshot with no testViewOverrides 1`] = `
<AssessmentTestView
  configuration={
    {
      "key": "configStub",
      "testViewOverrides": undefined,
      "testViewType": "Assessment",
    }
  }
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;

exports[`TestViewContainer for testViewType=Assessment renders per snapshot with testViewOverrides 1`] = `
<AssessmentTestView
  configuration={
    {
      "key": "configStub",
      "testViewOverrides": {
        "content": "stub content page component "content"",
        "guidance": "stub content page component "guidance"",
      },
      "testViewType": "Assessment",
    }
  }
  content="stub content page component "content""
  deps={
    {
      "automatedChecksCardSelectionMessageCreator": {},
      "needsReviewCardSelectionMessageCreator": {},
    }
  }
  guidance="stub content page component "guidance""
  selectedTest={-1}
  someParentProp="parent-prop"
  visualizationConfigurationFactory={
    {
      "getConfiguration": [Function],
    }
  }
  visualizationScanResultData={
    {
      "tabStops": {
        "requirements": {},
      },
    }
  }
/>
`;
